tests/transpiler/x/zig/cross_join.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/cross_join.zig:17:23: error: unable to infer array size
    const customers: [_]Customer = [_]Customer{.{ .id = 1, .name = "Alice" }, .{ .id = 2, .name = "Bob" }, .{ .id = 3, .name = "Charlie" }};
                      ^
